--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,21 @@
+*
+@font-face {
+   font-family: 'Bebas';
+   src: url(assets/font/Bebas-Regular.ttf);
+{
+   text-decoration: none;
+   margin: 0px;
+   padding: 0px;
+}
 
+body {
+   margin: 0px;
+   padding: 0px;
+   font-family: 'Bebas', sans serif;
+}
+
+.wrapper {
+   width: 1100px;
+   margin: auto;
+   position: relative;
+}
