--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,25 @@ body {
    margin: auto;
    position: relative;
 }
+
+nav {
+   width: 100%;
+   margin: auto;
+   display: flex;
+   line-height: 80px;
+   position: sticky;
+   position: -webkit-sticky;
+   top: 0;
+   background: #000000;
+}
+
+nav ul {
+   list-style-type: none;
+   margin: 0;
+   padding: 0;
+   overflow: hidden;
+}
+
+nav ul li a:hover {
+   text-decoration: underline;
+}
