--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,18 @@ body {
    position: relative;
 }
 
+.logo a {
+    font-size: 50px;
+    font-weight: 800;
+    float: left;
+    font-family: courier;
+    color: #364f6b;
+}
+
+.menu {
+    float: right;
+}
+
 nav {
    width: 100%;
    margin: auto;
