--- a/css/style.css
+++ b/css/style.css
@@ -20,16 +20,14 @@ body {
    position: relative;
 }
 
-.logo a {
-    font-size: 50px;
-    font-weight: 800;
-    float: left;
-    font-family: courier;
-    color: #364f6b;
+.logopicture {
+   width: 100px;
+   float: left;
+   color: #364f6b;
 }
 
 .menu {
-    float: right;
+   float: right;
 }
 
 nav {
