--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,9 @@ body {
    position: relative;
 }
 
-.logopicture {
-   width: 100;
-   height: 50;
+.logo {
+   width: 50%;
    float: left;
-   color: #364f6b;
 }
 
 .menu {
